--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #1EBAD6;
+  border: 5px solid #1C274C;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
